res/examples/invalid/fn_expr_returning_number.eg
(a: number, b: number): number => 123;

// out: SyntaxError: unexpected "123"; expected: ["\"{\"", "\"(\""]